--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,7 @@ html {
     margin: 0;
     padding: 0;
 }
-.contentHolder {
-    display: flex;
-    width: 100vw;
-    justify-content: center;
-}
+
 .flowContent {
     flex-wrap: wrap;
     display: flex;
@@ -20,3 +16,30 @@ html {
     height: 200px;
 }
 
+@media (min-width: 600px) {
+    .flowContent {
+        width: 500px;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+    }
+}
+
+@media (min-width: 1200px) {
+    .flowContent {
+        width: 900px;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+    }
+}
+ 
+
+@media (min-width: 1600px) {
+    .flowContent {
+        width: 1400px;
+        flex-wrap: wrap;
+        display: flex;
+        justify-content: center;
+    }
+}
